--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,10 @@ body {
   background-color: #4DA6FF ;
 }
 
+.hover-text-grey:hover {
+  color: #D9D9D9;
+}
+
 .bg-ios-blue {
   background-color: #007AFF;
 }
@@ -94,4 +98,23 @@ body {
 
 .font-medium {
   font-weight: 500;
+}
+
+.text-grey {
+  color: #D9D9D9;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 100% 0;
+  }
+  100% {
+    background-position: -100% 0;
+  }
+}
+
+.loading-animation {
+  animation: shimmer 1s infinite linear;
+  background-image: linear-gradient(to right, #ddd 0%, #ececec 100%);
+  background-size: 200% 100%;
 }
