--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,6 +78,14 @@ body {
   background-color: #8EE5EE;
 }
 
+.text-10 {
+  font-size: 10px;
+}
+
+.text-11 {
+  font-size: 11px;
+}
+
 .text-12 {
   font-size: 12px;
 }
